<resources>
    <string name="app_name">Hotel Romeo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">A.Cliente</string>
    <string name="title_cliente">Cuenta</string>
    <string name="title_habitaciones">Habitaciones</string>
    <string name="title_location">Localizacion</string>


    //Objetos Login
    <string name="login">Login</string>
    <string name="register">Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="noCuenta">¿No tienes cuenta? Registrate</string>
    <string name="email">Email</string>
    <string name="salir">Salir</string>

    //Objetos Register

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="loginEnRegister">Iniciar Sesion Aqui</string>


    //OBJETOS DE HOME
    <string name="reservaTexto">TU RESERVA</string>
    <string name="reservaCliente">No tienes ninguna reserva</string>
    <string name="horarioApertura">HORARIO DE APERTURA</string>

    //OBJETOS DE ATENCION AL CLIENTE
    <string name="llamadas">Llamanos , le atenderemos</string>
    <string name="numeHotel">682924866</string>
    <string name="horarioHotel">9:00h - 21:00h</string>
    <string name="contactoCorreo">CONTACTA POR CORREO</string>
    <string name="asuntoCorreo">Asunto</string>
    <string name="mensajeCorreo">Mensaje</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //OBJETOS PERFIL
    <string name="nombrePerfil">Nombre</string>
    <string name="apellidoPerfil">Apellido</string>
    <string name="emailPerfil">Email</string>
    <string name="datosPerfil">Datos de Perfil</string>
</resources>