<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icono_casa"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icono_atencion"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/icono_ubicacion"
        android:onClick="onOptionsItemSelected"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_habitaciones"
        android:icon="@drawable/icono_reservas"
        android:title="@string/title_habitaciones" />

    <item
        android:id="@+id/navigation_cliente"
        android:icon="@drawable/icono_perfil"
        android:title="@string/title_cliente" />

</menu>