<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_reservas"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_reservas"
        android:name="com.example.myapplication.ventanas.habitaciones.HabitacionesFragment"
        android:label="@string/title_reservas"
        tools:layout="@layout/fragment_habitaciones" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ventanas.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ventanas.atencion.AtencionFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_atencion" />

    <fragment
        android:id="@+id/navigation_cliente"
        android:name="com.example.myapplication.ventanas.cliente.ClienteFragment"
        android:label="@string/title_cliente"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.myapplication.ventanas.login.LoginFragment"
        android:label="login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.myapplication.ventanas.register.RegisterFragment"
        android:label="login"
        tools:layout="@layout/fragment_register" />
</navigation>