<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ImageView
        android:id="@+id/cuadroAtecion"
        android:layout_width="316dp"
        android:layout_height="115dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/cuadroblanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/llamenos"
        android:layout_width="284dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/llamadas"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="@+id/cuadroAtecion"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/cuadroAtecion"
        app:layout_constraintTop_toTopOf="@+id/cuadroAtecion" />

    <TextView
        android:id="@+id/numeroHotel"
        android:layout_width="259dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/numeHotel"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="@+id/cuadroAtecion"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/cuadroAtecion"
        app:layout_constraintTop_toBottomOf="@+id/llamenos" />

    <TextView
        android:id="@+id/horarioAC"
        android:layout_width="160dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/horarioHotel"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroAtecion"
        app:layout_constraintEnd_toEndOf="@+id/cuadroAtecion"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/cuadroAtecion" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="27dp"
        android:textSize="12dp"
        android:gravity="center"
        android:text="@string/contactoCorreo"
        app:layout_constraintBottom_toTopOf="@+id/listadohome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroAtecion"
        app:layout_constraintVertical_bias="0.60" />

    <ImageView
        android:id="@+id/listadohome"
        android:layout_width="316dp"
        android:layout_height="308dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/cuadrolistadohome"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroAtecion" />



</androidx.constraintlayout.widget.ConstraintLayout>