<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ventanas.cliente.ClienteFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="316dp"
        android:layout_height="160dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/fondoperfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombrePerfil"
        android:layout_width="174dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/nombrePerfil"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/apellidoPerfil"
        android:layout_width="174dp"
        android:layout_height="27dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        android:text="@string/apellidoPerfil"
        app:layout_constraintBottom_toTopOf="@+id/emailPerfil"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/nombrePerfil"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/emailPerfil"
        android:layout_width="287dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/emailPerfil"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.315" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="85dp"
        android:layout_height="73dp"
        android:src="@drawable/fotoperfil"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="227dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/datosPerfil"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="318dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/misreservas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="318dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/mismesas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="318dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/mispagos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />


</androidx.constraintlayout.widget.ConstraintLayout>