<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ventanas.home.HomeFragment">


    <ImageView
        android:id="@+id/cuadroReserva"
        android:layout_width="316dp"
        android:layout_height="115dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/cuadroblanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/reservaTitulo"
        android:layout_width="274dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/reservaTexto"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@+id/reservaDelCliente"
        app:layout_constraintEnd_toEndOf="@+id/cuadroReserva"
        app:layout_constraintStart_toStartOf="@+id/cuadroReserva"
        app:layout_constraintTop_toTopOf="@+id/cuadroReserva"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/reservaDelCliente"
        android:layout_width="259dp"
        android:layout_height="28dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/reservaCliente"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroReserva"
        app:layout_constraintEnd_toEndOf="@+id/cuadroReserva"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/cuadroReserva" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="27dp"
        android:textSize="12dp"
        android:gravity="center"
        android:text="@string/horarioApertura"
        app:layout_constraintBottom_toTopOf="@+id/listadohome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroReserva"
        app:layout_constraintVertical_bias="0.60" />

    <ImageView
        android:id="@+id/listadohome"
        android:layout_width="316dp"
        android:layout_height="308dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/cuadrolistadohome"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuadroReserva" />

    <ImageButton
        android:id="@+id/botonrecepcion"
        android:layout_width="301dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/botonrecepcion"
        app:layout_constraintEnd_toEndOf="@+id/listadohome"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/listadohome"
        app:layout_constraintTop_toTopOf="@+id/listadohome" />

    <ImageButton
        android:id="@+id/botonrestaurante"
        android:layout_width="301dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botonrestaurante"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/listadohome"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/listadohome"
        app:layout_constraintTop_toBottomOf="@+id/botonrecepcion" />

    <ImageButton
        android:id="@+id/botonocio"
        android:layout_width="301dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botonocio"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/listadohome"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/listadohome"
        app:layout_constraintTop_toBottomOf="@+id/botonrestaurante" />

    <ImageButton
        android:id="@+id/botonparking"
        android:layout_width="301dp"
        android:layout_height="53dp"
        android:background="@drawable/botonparking"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/listadohome"
        app:layout_constraintEnd_toEndOf="@+id/listadohome"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/listadohome"
        app:layout_constraintTop_toBottomOf="@+id/botonocio"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/pruebaHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>